# litestar-project

./: .env  Dockerfile  alembic.ini  compose.yaml  pyproject.toml
app/: config.py  db.py  exception_handlers.py  main.py  models.py  routes.py  schemas.py  service.py
migrations/versions/: 77db681c2022_initial.py
